solution of NPE during course application creation

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -187,7 +187,8 @@ msg.ui.validation.err.notContainsCapitalLetter=Neobsahuje velké písmeno.
 msg.ui.validation.err.usernameNotExists=Neplatný Email/Uživatelské jméno.
 msg.ui.validation.err.courseLocationUsed=Položku "{0}" nelze odstranit protože je použita v některém kurzu.
 msg.ui.warn.agreementWithHealtAndDataInfo=Před odesláním je potřeba potvrdit souhlas s kolektivním výcvikem a zpracováním osobních údajů.
-msg.ui.warn.courseIsFull=Vybraný kurz "{0}" je již obsazen.
+msg.ui.warn.courseIsFull=Vybraný kurz "{0}" je již obsazen, vyberte prosím jiný kurz z nabídky.
+msg.ui.warn.courseIsDeleted=Vybraný kurz "{0}" byl odstraněn, vyberte prosím jiný kurz z nabídky.
 msg.ui.quest.deleteApplication=Opravdu si přejete odstranit přihlášku "{0}"?
 msg.ui.quest.deleteCourse=Opravdu si přejete odstranit kurz "{0}"?
 msg.ui.quest.deleteUser=Opravdu si přejete odstranit uživatele "{0}"?
