add price to course description in course application

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -151,6 +151,7 @@ txt.ui.common.MaxParticCount=Maximální počet účastníků
 txt.ui.common.CourseSelection=Výběr kurzu
 txt.ui.common.Occupancy=Obsazenost
 txt.ui.common.occupied=obsazeno
+txt.ui.common.CourseDeciption=Popis kurzu
 
 txt.ui.month.0=Leden
 txt.ui.month.1=Únor
