--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -152,6 +152,8 @@ txt.ui.common.CourseSelection=Výběr kurzu
 txt.ui.common.Occupancy=Obsazenost
 txt.ui.common.occupied=obsazeno
 txt.ui.common.CourseDeciption=Popis kurzu
+txt.ui.common.SelectCourseLocation=Vyberte místo konání
+txt.ui.common.SelectCourse=Vyberte kurz
 
 txt.ui.month.0=Leden
 txt.ui.month.1=Únor
