--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -154,6 +154,7 @@ txt.ui.common.occupied=obsazeno
 txt.ui.common.CourseDeciption=Popis kurzu
 txt.ui.common.SelectCourseLocation=Vyberte místo konání
 txt.ui.common.SelectCourse=Vyberte kurz
+txt.ui.common.NoCourseFoundForLocation=Pro vybrané místo konání nebyl nalezen žádný kurz.
 
 txt.ui.month.0=Leden
 txt.ui.month.1=Únor
