agreement documents file download on course application

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -155,7 +155,8 @@ txt.ui.common.CourseDeciption=Popis kurzu
 txt.ui.common.SelectCourseLocation=Vyberte místo konání
 txt.ui.common.SelectCourse=Vyberte kurz
 txt.ui.common.NoCourseFoundForLocation=Pro vybrané místo konání nebyl nalezen žádný kurz.
-txt.ui.common.ClubRulesAgreement=Souhlasím s pravidly klubu {0}
+txt.ui.common.ClubRulesAgreement=Souhlasím s pravidly klubu {0}.
+txt.ui.common.DocumentToDownload=Celý dokument zde.
 
 txt.ui.month.0=Leden
 txt.ui.month.1=Únor
