--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -156,6 +156,14 @@ txt.ui.common.SelectCourseLocation=Vyberte místo konání
 txt.ui.common.SelectCourse=Vyberte kurz
 txt.ui.common.NoCourseFoundForLocation=Pro vybrané místo konání nebyl nalezen žádný kurz.
 txt.ui.common.DocumentToDownload=Celý dokument zde.
+txt.ui.common.AccountNo=Číslo účtu
+txt.ui.common.VarSymbol=Variabilní symbol
+txt.ui.common.Amount2=Částka
+txt.ui.common.Messaging=Odesílání zpráv
+txt.ui.common.PaymentInstructionsFirstSemester=Instrukce k platbě za I. pololetí
+txt.ui.common.PaymentInstructionsSecondSemester=Instrukce k platbě za II. pololetí
+txt.ui.common.PaymentInstruction=Instrukce k platbě
+txt.ui.common.PaymentSum=Souhrn plateb
 
 txt.ui.month.0=Leden
 txt.ui.month.1=Únor
@@ -194,6 +202,7 @@ msg.ui.validation.err.courseLocationUsed=Položku "{0}" nelze odstranit protože
 msg.ui.warn.agreementWithHealtAndDataInfo=Před odesláním je potřeba potvrdit souhlas s uvedenými podmínkami.
 msg.ui.warn.courseIsFull=Vybraný kurz "{0}" je již obsazen, vyberte prosím jiný kurz z nabídky.
 msg.ui.warn.courseIsDeleted=Vybraný kurz "{0}" byl odstraněn, vyberte prosím jiný kurz z nabídky.
+msg.ui.warn.noBankAccountInConfig=V nastavení není vyplněno číslo bankovního účtu.
 msg.ui.quest.deleteApplication=Opravdu si přejete odstranit přihlášku "{0}"?
 msg.ui.quest.deleteCourse=Opravdu si přejete odstranit kurz "{0}"?
 msg.ui.quest.deleteUser=Opravdu si přejete odstranit uživatele "{0}"?
@@ -221,8 +230,9 @@ msg.ui.info.userCreatedAdnSendMail=Uživatel {0} byl založen, na email {1} byla
 msg.ui.warn.userNotExistsInDB=Uživatel již v databázi neexistuje, obnovte prosím data na stránce.
 msg.ui.info.passwordResetAndSendToEmail=Heslo uživatele {0} resetováno a odesláno na email {1} .
 msg.ui.info.passwordResetAndSendToEmail2=Heslo uživatele {0} bylo resetováno a odesláno na zaregistrovaný email.
-msg.ui.quest.sendMailToUnregisteredParticipant=Odeslat upozorňující mail pro {0} neprodloužených přihlášek?
-msg.ui.title.sendMail=Odeslání mailu.
+msg.ui.quest.sendMailToUnregisteredParticipant=Odeslat upozorňující zpráva pro {0} neprodloužených přihlášek?
+msg.ui.quest.sendMailWithPaymentInstructions=Přejete si odeslat zobrazeným účastníkům platební instrukce za {0}. pololetí?
+msg.ui.title.sendMail=Odeslání zprávy.
 msg.ui.error.invalidRequest=Neplatný požadavek.
 msg.ui.warn.userHaveRegisteredToCourse=Účastník {0} je již přihlášen do ročníku {1}/{2}. 
 msg.ui.info.bankPaymentProcessed.arg=Zpracováno "{0}" nových bankovních plateb.
@@ -270,6 +280,11 @@ msg.ui.mail.unregisteredToCurrSeason.text0=Dobrý den,
 msg.ui.mail.unregisteredToCurrSeason.text1=v případě, že máte zájem aby Vaše dítě {0} pokračovalo v plavání i příští školní rok, prosím klikněte na odkaz níže, kterým provedete přihlášení dítěte.
 msg.ui.mail.unregisteredToCurrSeason.text2={0}/pages/public/prihlaska-ucastnik-pokracovani.zul?courseParticipant={1}&courseParticRepresentative={2}
 msg.ui.mail.unregisteredToCurrSeason.text3=S pozdravem
+
+# mail s platebními instrukcemi
+msg.ui.mail.paymentInstruction.subject=Platba za kurz "{0}" pro {1}. pololetí ročníku {2}
+msg.ui.mail.paymentInstruction.text0=Dobrý den,
+msg.ui.mail.paymentInstruction.text1=níže zasíláme instrukce k platbě za kurz "{0}" pro {1}. pololetí ročníku {2}.
 
 # Enums
 enum.DayOfWeek.MONDAY=pondělí
