send payment instruction

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -164,6 +164,7 @@ txt.ui.common.PaymentInstructionsFirstSemester=Instrukce k platbě za I. pololet
 txt.ui.common.PaymentInstructionsSecondSemester=Instrukce k platbě za II. pololetí
 txt.ui.common.PaymentInstruction=Instrukce k platbě
 txt.ui.common.PaymentSum=Souhrn plateb
+txt.ui.common.Price=Cena
 
 txt.ui.month.0=Leden
 txt.ui.month.1=Únor
