payment deadline input and message to customer representative

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -165,6 +165,7 @@ txt.ui.common.PaymentInstructionsSecondSemester=Instrukce k platbě za II. polol
 txt.ui.common.PaymentInstruction=Instrukce k platbě
 txt.ui.common.PaymentSum=Souhrn plateb
 txt.ui.common.Price=Cena
+txt.ui.common.PaymentDeadline=Platbu uhradit nejpozději do
 
 txt.ui.month.0=Leden
 txt.ui.month.1=Únor
@@ -287,6 +288,7 @@ msg.ui.mail.unregisteredToCurrSeason.text3=S pozdravem
 msg.ui.mail.paymentInstruction.subject=Platba za kurz "{0}" pro {1}. pololetí ročníku {2}
 msg.ui.mail.paymentInstruction.text0=Dobrý den,
 msg.ui.mail.paymentInstruction.text1=níže zasíláme instrukce k platbě za kurz "{0}" pro {1}. pololetí ročníku {2}.
+msg.ui.mail.paymentInstruction.text2=Platbu prosím pošlete nejpozději do {0}.
 
 # Enums
 enum.DayOfWeek.MONDAY=pondělí
