payment notification indication on page

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -97,6 +97,7 @@ txt.ui.common.user=Uživatel
 txt.ui.common.page=Page
 txt.ui.common.residence=Bydliště
 txt.ui.common.payed=Zaplaceno
+txt.ui.common.paymentInstructionSent=Instr. k platbě
 txt.ui.common.inCourse=V kurzu
 txt.ui.common.yes=Ano
 txt.ui.common.no=Ne
@@ -166,6 +167,7 @@ txt.ui.common.PaymentInstruction=Instrukce k platbě
 txt.ui.common.PaymentSum=Souhrn plateb
 txt.ui.common.Price=Cena
 txt.ui.common.PaymentDeadline=Platbu uhradit nejpozději do
+txt.ui.common.PaymentInstructionSentToUser=Odeslání instrukcí k platbě
 
 txt.ui.month.0=Leden
 txt.ui.month.1=Únor
@@ -315,3 +317,7 @@ enum.PaymentProcessType.MANUAL=Manuálně
 enum.CoursePaymentState.NO_PAYMENT=žádná platba
 enum.CoursePaymentState.PARTLY=částečně zaplaceno
 enum.CoursePaymentState.PAYED=zaplaceno
+enum.PaymentNotifSendState.NO_NOTIFICATION=Neodeslány žádné instrukce
+enum.PaymentNotifSendState.NOT_SENT_FIRST_SEMESTER=Neodesláno pro I. pol.
+enum.PaymentNotifSendState.NOT_SENT_SECOND_SEMESTER=Neodesláno pro II. pol.
+enum.PaymentNotifSendState.BOTH=Odesláno pro obě pololetí
