change in payment instruction

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -287,9 +287,9 @@ msg.ui.mail.unregisteredToCurrSeason.text2={0}/pages/public/prihlaska-ucastnik-p
 msg.ui.mail.unregisteredToCurrSeason.text3=S pozdravem
 
 # mail s platebními instrukcemi
-msg.ui.mail.paymentInstruction.subject=Platba za kurz "{0}" pro {1}. pololetí ročníku {2}
+msg.ui.mail.paymentInstruction.subject=Platba za kurz "{0}" pro {1}. pololetí ročníku {2}, účastník {3}
 msg.ui.mail.paymentInstruction.text0=Dobrý den,
-msg.ui.mail.paymentInstruction.text1=níže zasíláme instrukce k platbě za kurz "{0}" pro {1}. pololetí ročníku {2}.
+msg.ui.mail.paymentInstruction.text1=níže zasíláme instrukce k platbě za kurz "{0}" pro {1}. pololetí ročníku {2}, účastník {3}.
 msg.ui.mail.paymentInstruction.text2=Platbu prosím pošlete nejpozději do {0}.
 
 # Enums
