payment notification batch sending

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -243,7 +243,7 @@ msg.ui.info.bankPaymentProcessed.arg=Zpracováno "{0}" nových bankovních plate
 msg.ui.info.bankPaymentPaired.arg=Napárováno "{0}" bankovních plateb s platbami účastníků kurzů.
 msg.ui.info.bankPaymentPaired.arg=Napárováno "{0}" bankovních plateb s platbami účastníků kurzů.
 msg.ui.info.messageSent=Zpráva byla odeslána.
-msg.ui.info.paymentInstructionSent=Zpráva s instrukcí k platbě byla odeslána. 
+msg.ui.info.paymentInstructionSent=Zpráva s instrukcí k platbě byla odeslána ke zpracování.
 
 # Messages - email
 msg.ui.mail.courseApplication.text0=Dobrý den,
