--- a/scb-data-service/src/main/resources/scb-data-service-message.properties
+++ b/scb-data-service/src/main/resources/scb-data-service-message.properties
@@ -1,8 +1,18 @@
-msg.validation.error.participant.surnameMissing=Hodnota p\u0159\u00edjmen\u00ed je povinn\u00e1.
+msg.validation.error.participant.surnameMissing=Hodnota příjmení je povinná.
 
-msg.validation.warn.courseApplication.notExistsInDB=P\u0159ihl\u00e1\u0161ku nelze odstranit, proto\u017ee ji\u017e v datab\u00e1zi neexistuje. Prove\u010fte obnoven\u00ed v prohl\u00ed\u017ee\u010di.
-msg.validation.warn.lesson.sameTimeIntervalAsOtherLesson=Ve stejn\u00fd \u010das ji\u017e pro tento kurz existuje lekce.
-msg.validation.warn.recordNotExistsInDB=Z\u00e1znam nelze odstranit, proto\u017ee ji\u017e v datab\u00e1zi neexistuje. Prove\u010fte obnoven\u00ed v prohl\u00ed\u017ee\u010di.
-msg.validation.warn.itemWithSameTypeAndNameAlreadyExists=Polo\u017eka se stejn\u00fdm n\u00e1zvem ji\u017e existuje.
-msg.validation.warn.styleCannotBeDeleteBecauseUsedInResult=Styl nelze odstranit, proto\u017ee je pou\u017eit ve v\u00fdsledku \u00fa\u010dastn\u00edka.
-msg.validation.warn.usernameWithSameUsernameExists=U\u017eivatel s u\u017eivatelsk\u00fdm jm\u00e9nem {0} ji\u017e v syst\u00e9mu existuje.
+msg.validation.warn.courseApplication.notExistsInDB=Přihlášku nelze odstranit, protože již v databázi neexistuje. Proveďte obnovení v prohlížeči.
+msg.validation.warn.lesson.sameTimeIntervalAsOtherLesson=Ve stejný čas již pro tento kurz existuje lekce.
+msg.validation.warn.recordNotExistsInDB=Záznam nelze odstranit, protože již v databázi neexistuje. Proveďte obnovení v prohlížeči.
+msg.validation.warn.itemWithSameTypeAndNameAlreadyExists=Položka se stejným názvem již existuje.
+msg.validation.warn.styleCannotBeDeleteBecauseUsedInResult=Styl nelze odstranit, protože je použit ve výsledku účastníka.
+msg.validation.warn.usernameWithSameUsernameExists=Uživatel s uživatelským jménem {0} již v systému existuje.
+
+# mail s platebními instrukcemi
+msg.ui.mail.paymentInstruction.subject=Platba za kurz "{0}" pro {1}. pololetí ročníku {2}, účastník {3}
+msg.ui.mail.paymentInstruction.text0=Dobrý den,
+msg.ui.mail.paymentInstruction.text1=níže zasíláme instrukce k platbě za kurz "{0}" pro {1}. pololetí ročníku {2}, účastník {3}.
+msg.ui.mail.paymentInstruction.text2=Platbu prosím pošlete nejpozději do {0}.
+txt.ui.common.AccountNo=Číslo účtu
+txt.ui.common.Amount=Částka
+txt.ui.common.CZK=Kč
+txt.ui.common.VarSymbol=Variabilní symbol
