update of course participant in course

--- a/scb-data-service/src/main/resources/scb-data-service-message.properties
+++ b/scb-data-service/src/main/resources/scb-data-service-message.properties
@@ -12,7 +12,10 @@ msg.ui.mail.paymentInstruction.subject=Platba za kurz "{0}" pro {1}. pololetí r
 msg.ui.mail.paymentInstruction.text0=Dobrý den,
 msg.ui.mail.paymentInstruction.text1=níže zasíláme instrukce k platbě za kurz "{0}" pro {1}. pololetí ročníku {2}, účastník {3}.
 msg.ui.mail.paymentInstruction.text2=Platbu prosím pošlete nejpozději do {0}.
+msg.ui.mail.paymentInstruction.text4=Pokud již byla platba uhrazena, berte prosím tuto zprávu jako bezpředmětnou.
+
 txt.ui.common.AccountNo=Číslo účtu
 txt.ui.common.Amount=Částka
 txt.ui.common.CZK=Kč
 txt.ui.common.VarSymbol=Variabilní symbol
+txt.ui.common.MessageToReceipent=Zpráva pro příjemce
