scheduling of payment processing and payment pairing

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -1,4 +1,3 @@
-txt.ui.administrator.email=jakub.zaoralek@gmail.com
 txt.ui.menu.application=PŘIHLÁŠKA
 txt.ui.menu.applicationWithYear=Přihláška - plavecký kurz {0}
 txt.ui.menu.dashboard=Úvodní stránka
@@ -168,6 +167,7 @@ txt.ui.common.PaymentSum=Souhrn plateb
 txt.ui.common.Price=Cena
 txt.ui.common.PaymentDeadline=Platbu uhradit nejpozději do
 txt.ui.common.PaymentInstructionSentToUser=Odeslání instrukcí k platbě
+txt.ui.common.MessageOptionalText=Volitelný text
 
 txt.ui.month.0=Leden
 txt.ui.month.1=Únor
