change in bank payment processing

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -139,8 +139,8 @@ txt.ui.common.CisloUctu=Číslo účtu
 txt.ui.common.ZpravaProPrijemce=Zpráva pro příjemce
 txt.ui.common.Podrobnosti=Podrobnosti
 txt.ui.common.Stahnout=Stáhnout
-txt.ui.common.Zparovat=Zpárovat
-txt.ui.common.RucneZparovat=Ručně zpárovat
+txt.ui.common.Zparovat=Spárovat
+txt.ui.common.RucneZparovat=Ručně spárovat
 txt.ui.common.ZparovaniPlatbyUcastnika=Zpárovnání platby účastníka [ {0} ]
 txt.ui.common.NovaZprava=Nová zpráva
 txt.ui.common.Odeslat=Odeslat
