change in mail about new course participant representative user

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -267,7 +267,7 @@ msg.ui.mail.text.newUserAdmin.text3=Heslo: {0}
 
 msg.ui.mail.text.newUser.text0=Po přihlášení Vám aplikace umožňuje
 msg.ui.mail.text.newUser.text1=- aktualizovat vaše kontaktní údaje a údaje vámi přihlášených dětí
-msg.ui.mail.text.newUser.text2=- přihlásit další dítě do kurzu
+msg.ui.mail.text.newUser.text2=- přihlásit další dítě do klubu
 msg.ui.mail.text.newUser.text3=- přihlásit dítě na nový ročník kurzu
 msg.ui.mail.text.newUser.text4=- přehled o kurzech navštěvovaných dítětem včetně termínů lekcí
 msg.ui.mail.text.newUser.text5=- přehled existujících přihlášek včetně stažení přihlášky do souboru pdf
