--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -14,7 +14,8 @@ txt.ui.menu.user=Uživatel
 txt.ui.menu.payments=Platby
 txt.ui.menu.bankPayments=Bankovní platby
 
-txt.ui.login=Přihlášení uživatele
+txt.ui.login=Přihlášení
+txt.ui.login.sub=Přihlašte se ke svému účtu
 txt.ui.forgottenPassword=Zapomenuté heslo
 
 txt.ui.common.contact=Kontakt
