detail kurzu, přemístění základních informací do tabboxu

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -172,6 +172,7 @@ txt.ui.common.PriceTotal=Celk. cena
 txt.ui.common.PaymentDeadline=Platbu uhradit nejpozději do
 txt.ui.common.PaymentInstructionSentToUser=Odeslání instrukcí k platbě
 txt.ui.common.MessageOptionalText=Volitelný text
+txt.ui.common.General=Obecné
 
 txt.ui.month.0=Leden
 txt.ui.month.1=Únor
