--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -45,6 +45,7 @@ txt.ui.common.description=Popis
 txt.ui.common.description2=Popis
 txt.ui.common.year=Rok
 txt.ui.common.participantCount=Účastníků
+txt.ui.common.participantCountAbbr=Účast.
 txt.ui.common.lessonPerWeekCount=Lekcí týdně
 txt.ui.common.new=Nový
 txt.ui.common.new2=Nová
