prihlaseni na druhe pololeti

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -171,6 +171,10 @@ txt.ui.common.PriceTotal=Celk. cena
 txt.ui.common.PaymentDeadline=Platbu uhradit nejpozději do
 txt.ui.common.PaymentInstructionSentToUser=Odeslání instrukcí k platbě
 txt.ui.common.MessageOptionalText=Volitelný text
+txt.ui.common.cancelParticipancy=Zrušit
+txt.ui.common.renewParticipancy=Obnovit
+txt.ui.common.participancy=Účast
+txt.ui.common.LogToCourse=Přihlásit do kurzu
 
 txt.ui.month.0=Leden
 txt.ui.month.1=Únor
@@ -247,6 +251,10 @@ msg.ui.info.bankPaymentPaired.arg=Napárováno "{0}" bankovních plateb s platba
 msg.ui.info.bankPaymentPaired.arg=Napárováno "{0}" bankovních plateb s platbami účastníků kurzů.
 msg.ui.info.messageSent=Zpráva byla odeslána.
 msg.ui.info.paymentInstructionSent=Zpráva s instrukcí k platbě byla odeslána ke zpracování.
+msg.ui.info.courseParticipationCanceled=Účast na kurzu byla zrušena.
+msg.ui.info.courseParticipationRenewed=Účast na kurzu byla obnovena.
+msg.ui.warn.participantAlreadyInCourse=Účastník je již do kurzu {0} zařazen.
+msg.ui.warn.participantLoggedToCourse=Účastník {0} byl zařazen do kurzu {1}.
 
 # Messages - email
 msg.ui.mail.courseApplication.text0=Dobrý den,
