prihlaseni na kurz do samostatna stranka

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -17,6 +17,7 @@ txt.ui.login=Přihlášení
 txt.ui.login.sub=Přihlašte se ke svému účtu
 txt.ui.forgottenPassword=Zapomenuté heslo
 
+txt.ui.loginToCourse=přihlášení na kurz
 txt.ui.common.contact=Kontakt
 txt.ui.common.firstname=Jméno
 txt.ui.common.surname=Příjmení
