filtrovani stavu odeslani instrukci k platbe, pridani polozek

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -336,4 +336,6 @@ enum.CoursePaymentState.OVERPAYED=přeplaceno
 enum.PaymentNotifSendState.NO_NOTIFICATION=Neodeslány žádné instrukce
 enum.PaymentNotifSendState.NOT_SENT_FIRST_SEMESTER=Neodesláno pro I. pol.
 enum.PaymentNotifSendState.NOT_SENT_SECOND_SEMESTER=Neodesláno pro II. pol.
+enum.PaymentNotifSendState.SENT_FIRST_SEMESTER=Odesláno pro I. pol.
+enum.PaymentNotifSendState.SENT_SECOND_SEMESTER=Odesláno pro II. pol.
 enum.PaymentNotifSendState.BOTH=Odesláno pro obě pololetí
