add address to course participant detail

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -179,6 +179,7 @@ txt.ui.common.cancelParticipancy=Zrušit
 txt.ui.common.renewParticipancy=Obnovit
 txt.ui.common.participancy=Účast
 txt.ui.common.LogToCourse=Přihlásit do kurzu
+txt.ui.common.Address=Adresa
 
 txt.ui.month.0=Leden
 txt.ui.month.1=Únor
