--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -131,7 +131,7 @@ txt.ui.common.Type=Druh
 txt.ui.common.Processed=Zpracováno
 txt.ui.common.NewPayment=Nová platba
 txt.ui.common.PaymentDetail=Detail platby
-txt.ui.common.ParticipantPayments= Platby {0}, kurz {1}
+txt.ui.common.ParticipantPayments= Platby - {0} | {1} | {2}
 txt.ui.common.State=Stav
 txt.ui.common.Summary=Souhrn
 txt.ui.common.Sum=Celkem
@@ -180,6 +180,7 @@ txt.ui.common.renewParticipancy=Obnovit
 txt.ui.common.participancy=Účast
 txt.ui.common.LogToCourse=Přihlásit do kurzu
 txt.ui.common.Address=Adresa
+txt.ui.common.Output=Výkon
 
 txt.ui.month.0=Leden
 txt.ui.month.1=Únor
