messageing new, layout and base functions

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -181,6 +181,9 @@ txt.ui.common.participancy=Účast
 txt.ui.common.LogToCourse=Přihlásit do kurzu
 txt.ui.common.Address=Adresa
 txt.ui.common.Output=Výkon
+txt.ui.common.Copy=Kopie
+txt.ui.common.Recipients=Příjemci
+txt.ui.common.FileAttachments=Připojit soubory
 
 txt.ui.month.0=Leden
 txt.ui.month.1=Únor
