send email validations

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -237,6 +237,13 @@ msg.ui.quest.participantRepresentativeExists=Email / Uživatelské jméno {0} je
 msg.ui.quest.participantPersonalNoExists=Rodné číslo {0} je již v systému registrováno. Prosím přihlaště se pod svým účtem do aplikace a na řádku dítěte zmáčkněte Přihláška na daný ročník.
 msg.ui.quest.participantPersonalNoExists2=Rodné číslo {0} je již v systému registrováno. 
 msg.ui.quest.MessageThrowOut=Opravdu si přejete zahodit tento koncept?
+
+msg.ui.quest.title.messageSendConfirm=Odeslání zprávy
+msg.ui.quest.MessageSendWithoutSubjectAndText=Opravdu chcete odeslat zprávu bez předmětu a textu?
+msg.ui.quest.MessageSendWithoutSubject=Opravdu chcete odeslat zprávu bez předmětu?
+msg.ui.quest.MessageSendWithoutText=Opravdu chcete odeslat zprávu bez textu?
+msg.ui.warn.MessageEnterToAddress=Zadejte alespoň jednoho příjemce.
+
 msg.ui.info.applicationSend=Přihláška do klubu byla úspěšně odeslána. Na zadanou primární emailovou adresu byl odeslán potvrzující email s přiloženou přihláškou.
 msg.ui.info.applicationForParticipantCreated=Účastník {0} byl úspěšně přihlášen do ročníku {1}/{2}. Na Vaši emailovou adresu byl odeslán potvrzující email s přiloženou přihláškou.
 msg.ui.info.changesSaved=Změny byly úspěšně uloženy.
