validations of entered email to and cc address

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -243,6 +243,9 @@ msg.ui.quest.MessageSendWithoutSubjectAndText=Opravdu chcete odeslat zprávu bez
 msg.ui.quest.MessageSendWithoutSubject=Opravdu chcete odeslat zprávu bez předmětu?
 msg.ui.quest.MessageSendWithoutText=Opravdu chcete odeslat zprávu bez textu?
 msg.ui.warn.MessageEnterToAddress=Zadejte alespoň jednoho příjemce.
+msg.ui.warn.MessageEnterValidToAddress=Žádná z adres příjemců není ve správném formátu.
+msg.ui.warn.MessageInvalidToAddress=Zadány adresy příjemců v nesprávném formátu: {0}.
+msg.ui.warn.MessageInvalidCcAddress=Zadány adresy v kopii v nesprávném formátu: {0}.
 
 msg.ui.info.applicationSend=Přihláška do klubu byla úspěšně odeslána. Na zadanou primární emailovou adresu byl odeslán potvrzující email s přiloženou přihláškou.
 msg.ui.info.applicationForParticipantCreated=Účastník {0} byl úspěšně přihlášen do ročníku {1}/{2}. Na Vaši emailovou adresu byl odeslán potvrzující email s přiloženou přihláškou.
