mail to user filter

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -186,7 +186,7 @@ txt.ui.common.Recipients=Příjemci
 txt.ui.common.To=Komu
 txt.ui.common.FileAttachments=Připojit soubory
 txt.ui.common.ThrowOut=Zahodit
-
+txt.ui.common.CleanFilter=Vyčistit filtr
 
 txt.ui.month.0=Leden
 txt.ui.month.1=Únor
