new messaging, side menu, send from course participant list

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -12,6 +12,7 @@ txt.ui.menu.users=Uživatelé
 txt.ui.menu.user=Uživatel
 txt.ui.menu.payments=Platby
 txt.ui.menu.bankPayments=Bankovní platby
+txt.ui.menu.messages=Zprávy
 
 txt.ui.login=Přihlášení
 txt.ui.login.sub=Přihlašte se ke svému účtu
@@ -164,7 +165,7 @@ txt.ui.common.DocumentToDownload=Celý dokument zde.
 txt.ui.common.AccountNo=Číslo účtu
 txt.ui.common.VarSymbol=Variabilní symbol
 txt.ui.common.Amount2=Částka
-txt.ui.common.Messaging=Odesílání zpráv
+txt.ui.common.Messaging=Zpráva
 txt.ui.common.PaymentInstructionsFirstSemester=Instrukce k platbě za I. pololetí
 txt.ui.common.PaymentInstructionsSecondSemester=Instrukce k platbě za II. pololetí
 txt.ui.common.PaymentInstruction=Instrukce k platbě
