new messaging, send from course participant list and course participant detail

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -165,7 +165,7 @@ txt.ui.common.DocumentToDownload=Celý dokument zde.
 txt.ui.common.AccountNo=Číslo účtu
 txt.ui.common.VarSymbol=Variabilní symbol
 txt.ui.common.Amount2=Částka
-txt.ui.common.Messaging=Zpráva
+txt.ui.common.Messaging=Odeslat zprávu
 txt.ui.common.PaymentInstructionsFirstSemester=Instrukce k platbě za I. pololetí
 txt.ui.common.PaymentInstructionsSecondSemester=Instrukce k platbě za II. pololetí
 txt.ui.common.PaymentInstruction=Instrukce k platbě
