--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -190,6 +190,7 @@ txt.ui.common.ThrowOut=Zahodit
 txt.ui.common.CleanFilter=Vyčistit filtr
 txt.ui.common.Messagetext=Text zprávy...
 txt.ui.common.Add=Přidat
+txt.ui.common.Delete=Odstranit
 
 txt.ui.month.0=Leden
 txt.ui.month.1=Únor
