--- a/scb-pom/pom.xml
+++ b/scb-pom/pom.xml
@@ -6,6 +6,15 @@
 	<packaging>pom</packaging>
 	<version>1.0-SNAPSHOT</version>
 
+
+	<repositories>
+	    <repository>
+	     <id>ZK CE</id>
+	     <name>ZK CE Repository</name>
+	     <url>https://mavensync.zkoss.org/maven2</url>
+	   </repository>
+	  </repositories>
+
 	<modules>
 		<module>../scb-data-service</module>
 		<module>../scb-ui-zk</module>
