messaging-new, recipient list with removable items to component, preparing for opening mail recipient selection from labels To and Cc

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -191,6 +191,7 @@ txt.ui.common.CleanFilter=Vyčistit filtr
 txt.ui.common.Messagetext=Text zprávy...
 txt.ui.common.Add=Přidat
 txt.ui.common.Delete=Odstranit
+txt.ui.common.UnknownContact=Neznámý kontakt
 
 txt.ui.month.0=Leden
 txt.ui.month.1=Únor
