--- a/ruian-client/pom.xml
+++ b/ruian-client/pom.xml
@@ -22,6 +22,18 @@
 	</properties>
 
 	<dependencies>
+		<dependency>
+			<groupId>wojnar.webtools</groupId>
+			<artifactId>webtools-rest</artifactId>
+			<version>1.0</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>wojnar.webtools</groupId>
+			<artifactId>webtools-logging</artifactId>
+			<version>1.0</version>
+		</dependency>
+	
 		<!-- Spring -->
 		<dependency>
 			<groupId>org.springframework</groupId>
