--- a/scb-pom/pom.xml
+++ b/scb-pom/pom.xml
@@ -18,6 +18,7 @@
 	<modules>
 		<module>../scb-data-service</module>
 		<module>../scb-ui-zk</module>
+		<module>../ruian-client</module>
 	</modules>
 	
 	<properties>
@@ -46,7 +47,12 @@
 				<artifactId>fio-client</artifactId>
 				<version>1.0</version>
 			</dependency>
-
+			<dependency>
+				<groupId>com.jzaoralek.scb</groupId>
+				<artifactId>ruian-client</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			
 			<!-- Spring -->
 			<dependency>
 				<groupId>org.springframework</groupId>
