ruian-client, verification address localization

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -332,6 +332,17 @@ msg.ui.mail.paymentInstruction.text0=Dobrý den,
 msg.ui.mail.paymentInstruction.text1=níže zasíláme instrukce k platbě za kurz "{0}" pro {1}. pololetí ročníku {2}, účastník {3}.
 msg.ui.mail.paymentInstruction.text2=Platbu prosím pošlete nejpozději do {0}.
 
+# address
+msg.ui.address.valid=Platná
+msg.ui.address.invalid=Neplatná
+msg.ui.address.notVerified=Neověřená
+msg.ui.address.Region=Kraj
+msg.ui.address.EvNo=Číslo evidenční
+msg.ui.address.Verify=Ověřit
+msg.ui.address.AddressIsValid=Adresa je platná.
+msg.ui.address.AddressIsNotValid=Adresa není platná.
+msg.ui.address.AddressVerificationServiceNotAvailable=Služba pro ověření adresy není dostupná, použijte prosím neověřenou adresu.
+
 # Enums
 enum.DayOfWeek.MONDAY=pondělí
 enum.DayOfWeek.TUESDAY=úterý
