ruian-client, new attributes, database, domain, dao and junit

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -375,3 +375,7 @@ enum.PaymentNotifSendState.NOT_SENT_SECOND_SEMESTER=Neodesláno pro II. pol.
 enum.PaymentNotifSendState.SENT_FIRST_SEMESTER=Odesláno pro I. pol.
 enum.PaymentNotifSendState.SENT_SECOND_SEMESTER=Odesláno pro II. pol.
 enum.PaymentNotifSendState.BOTH=Odesláno pro obě pololetí
+
+enum.AddressValidationStatus.VALID=Platná
+enum.AddressValidationStatus.INVALID=Neplatná
+enum.AddressValidationStatus.NOT_VERIFIED=Neověřená
