ruian-client, address component development

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -192,6 +192,8 @@ txt.ui.common.Messagetext=Text zprávy...
 txt.ui.common.Add=Přidat
 txt.ui.common.Delete=Odstranit
 txt.ui.common.UnknownContact=Neznámý kontakt
+txt.ui.common.ForeignAddress=Zahraniční adresa
+txt.ui.common.Save=Uložit
 
 txt.ui.month.0=Leden
 txt.ui.month.1=Únor
@@ -242,6 +244,8 @@ msg.ui.quest.participantRepresentativeExists=Email / Uživatelské jméno {0} je
 msg.ui.quest.participantPersonalNoExists=Rodné číslo {0} je již v systému registrováno. Prosím přihlaště se pod svým účtem do aplikace a na řádku dítěte zmáčkněte Přihláška na daný ročník.
 msg.ui.quest.participantPersonalNoExists2=Rodné číslo {0} je již v systému registrováno. 
 msg.ui.quest.MessageThrowOut=Opravdu si přejete zahodit tento koncept?
+msg.ui.quest.ProcessNotValidAddress=Zadaná adresa není platná, přejete si přesto pokračovat?
+msg.ui.quest.title.NotValidAddress=Neplatná adresa
 
 msg.ui.quest.title.messageSendConfirm=Odeslání zprávy
 msg.ui.quest.MessageSendWithoutSubjectAndText=Opravdu chcete odeslat zprávu bez předmětu a textu?
