ruian-client, using on mobile device

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -68,7 +68,7 @@ txt.ui.common.value=Hodnota
 txt.ui.common.street=Ulice
 txt.ui.common.city=Město
 txt.ui.common.landRegNo=Číslo popisné
-txt.ui.common.houseNo=Číslo orientační
+txt.ui.common.houseNo=Číslo orient.
 txt.ui.common.zipCode=PSČ
 txt.ui.common.configBasic=Základní nastavení
 txt.ui.common.courseLocations=Místa konání kurzů
@@ -341,7 +341,7 @@ msg.ui.address.valid=Platná
 msg.ui.address.invalid=Neplatná
 msg.ui.address.notVerified=Neověřená
 msg.ui.address.Region=Kraj
-msg.ui.address.EvNo=Číslo evidenční
+msg.ui.address.EvNo=Číslo ev.
 msg.ui.address.Verify=Ověřit
 msg.ui.address.AddressIsValid=Adresa je platná.
 msg.ui.address.AddressIsNotValid=Adresa není platná.
