ruian-client, search place by street and city

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -346,6 +346,7 @@ msg.ui.address.Verify=Ověřit
 msg.ui.address.AddressIsValid=Adresa je platná.
 msg.ui.address.AddressIsNotValid=Adresa není platná.
 msg.ui.address.AddressVerificationServiceNotAvailable=Služba pro ověření adresy není dostupná, použijte prosím neověřenou adresu.
+msg.ui.address.FillCityAndStreet=Vyplňte město a ulici.
 
 # Enums
 enum.DayOfWeek.MONDAY=pondělí
