ruian-client, cannot send course application with invalid address

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -245,6 +245,7 @@ msg.ui.quest.participantPersonalNoExists=Rodné číslo {0} je již v systému r
 msg.ui.quest.participantPersonalNoExists2=Rodné číslo {0} je již v systému registrováno. 
 msg.ui.quest.MessageThrowOut=Opravdu si přejete zahodit tento koncept?
 msg.ui.quest.ProcessNotValidAddress=Zadaná adresa není platná, přejete si přesto pokračovat?
+msg.ui.warn.ProcessNotValidAddress=Zadaná adresa není platná, zadejte prosím platnou adresu.
 msg.ui.quest.title.NotValidAddress=Neplatná adresa
 
 msg.ui.quest.title.messageSendConfirm=Odeslání zprávy
