GUI for citizenship and sex selection on course application

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -194,6 +194,10 @@ txt.ui.common.Delete=Odstranit
 txt.ui.common.UnknownContact=Neznámý kontakt
 txt.ui.common.ForeignAddress=Zahraniční adresa
 txt.ui.common.Save=Uložit
+txt.ui.common.CzechCitizen=občan ČR
+txt.ui.common.Sex=Pohlaví
+txt.ui.common.Sex.male=muž
+txt.ui.common.Sex.female=žena
 
 txt.ui.month.0=Leden
 txt.ui.month.1=Únor
