--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -233,6 +233,7 @@ msg.ui.validation.err.notContainsNumber=Neobsahuje žádné číslo.
 msg.ui.validation.err.notContainsCapitalLetter=Neobsahuje velké písmeno.
 msg.ui.validation.err.usernameNotExists=Neplatný Email/Uživatelské jméno.
 msg.ui.validation.err.courseLocationUsed=Položku "{0}" nelze odstranit protože je použita v některém kurzu.
+msg.ui.validation.err.birthdateNotEqualsBirthNUmber=Datum neodpovídá rodnému číslu.
 msg.ui.warn.agreementWithHealtAndDataInfo=Před odesláním je potřeba potvrdit souhlas s uvedenými podmínkami.
 msg.ui.warn.courseIsFull=Vybraný kurz "{0}" je již obsazen, vyberte prosím jiný kurz z nabídky.
 msg.ui.warn.courseIsDeleted=Vybraný kurz "{0}" byl odstraněn, vyberte prosím jiný kurz z nabídky.
