add ISCUS attributes to course participant

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -390,3 +390,7 @@ enum.PaymentNotifSendState.BOTH=Odesláno pro obě pololetí
 enum.AddressValidationStatus.VALID=Platná
 enum.AddressValidationStatus.INVALID=Neplatná
 enum.AddressValidationStatus.NOT_VERIFIED=Neověřená
+
+enum.IscusRole.ACTIVE_SPORTSMAN=Aktivní sportovec
+enum.IscusRole.ACTIVE_SPORTSMAN_PROFESSIONAL=Aktivní sportovec - soutěže
+enum.IscusRole.OTHER=Ostatní
