add ISCUS attributes to course participant

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -199,6 +199,11 @@ txt.ui.common.Sex=Pohlaví
 txt.ui.common.Sex.male=muž
 txt.ui.common.Sex.female=žena
 
+txt.ui.iscus.particId=ID člena
+txt.ui.iscus.particRole=Role
+txt.ui.iscus.systemId=ID systému
+
+
 txt.ui.month.0=Leden
 txt.ui.month.1=Únor
 txt.ui.month.2=Březen
