add ISCUS export to course participant list

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -68,7 +68,9 @@ txt.ui.common.value=Hodnota
 txt.ui.common.street=Ulice
 txt.ui.common.city=Město
 txt.ui.common.landRegNo=Číslo popisné
+txt.ui.common.landRegNo.abbr=Čp
 txt.ui.common.houseNo=Číslo orient.
+txt.ui.common.houseNo.abbr=Čo
 txt.ui.common.zipCode=PSČ
 txt.ui.common.configBasic=Základní nastavení
 txt.ui.common.courseLocations=Místa konání kurzů
@@ -199,10 +201,18 @@ txt.ui.common.Sex=Pohlaví
 txt.ui.common.Sex.male=muž
 txt.ui.common.Sex.female=žena
 
-txt.ui.iscus.particId=ID člena
+txt.ui.iscus.particId=ID člena ve svazu
 txt.ui.iscus.particRole=Role
 txt.ui.iscus.systemId=ID systému
+txt.ui.iscus.systemIdNotEdit=ID systému - NEUPRAVOVAT
+txt.ui.iscus.IsTrainer=Je trenér
+txt.ui.iscus.IsReferee=Je rozhodčí
+txt.ui.iscus.ClubLabels=Štítky oddílu
 
+txt.ui.export.Standard=Standardní
+txt.ui.export.Cus=Česká unie sportu
+txt.ui.export.CSV=csv
+txt.ui.export.XLS=xls 
 
 txt.ui.month.0=Leden
 txt.ui.month.1=Únor
