course application confirmation email from sourse participant list

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -201,6 +201,9 @@ txt.ui.common.Sex=Pohlaví
 txt.ui.common.Sex.male=muž
 txt.ui.common.Sex.female=žena
 
+txt.ui.common.confirmCourseApplicationEmail=Potvrzující email k přihlášce
+txt.ui.common.confirmCourseApplicationEmail.desc=Odešle potvrzuijící email na vybrané přihlášky
+
 txt.ui.iscus.particId=ID člena ve svazu
 txt.ui.iscus.particRole=Role
 txt.ui.iscus.systemId=ID systému
@@ -296,6 +299,7 @@ msg.ui.warn.userNotExistsInDB=Uživatel již v databázi neexistuje, obnovte pro
 msg.ui.info.passwordResetAndSendToEmail=Heslo uživatele {0} resetováno a odesláno na email {1} .
 msg.ui.info.passwordResetAndSendToEmail2=Heslo uživatele {0} bylo resetováno a odesláno na zaregistrovaný email.
 msg.ui.quest.sendMailToUnregisteredParticipant=Odeslat upozorňující zpráva pro {0} neprodloužených přihlášek?
+msg.ui.quest.sendMailCourseApplication=Přejete si odeslat potvrzující email pro vybrané přihlášky?
 msg.ui.quest.sendMailWithPaymentInstructions=Přejete si odeslat zobrazeným účastníkům platební instrukce za {0}. pololetí?
 msg.ui.title.sendMail=Odeslání zprávy.
 msg.ui.error.invalidRequest=Neplatný požadavek.
@@ -309,10 +313,11 @@ msg.ui.info.courseParticipationCanceled=Účast na kurzu byla zrušena.
 msg.ui.info.courseParticipationRenewed=Účast na kurzu byla obnovena.
 msg.ui.warn.participantAlreadyInCourse=Účastník je již do kurzu {0} zařazen.
 msg.ui.warn.participantLoggedToCourse=Účastník {0} byl zařazen do kurzu {1}.
+msg.ui.info.courseApplicationMailSent=Potvrzující email byl odeslán pro vybrané přihlášky.
 
 # Messages - email
 msg.ui.mail.courseApplication.text0=Dobrý den,
-msg.ui.mail.courseApplication.text1=děkujeme za podání přihlášky.
+msg.ui.mail.courseApplication.text1=přihláška byla úspěšně zaregistrována.
 msg.ui.mail.courseApplication.text3=Účastník: 
 msg.ui.mail.courseApplication.text4=Kurz:
 msg.ui.mail.courseApplication.text5=Na první lekci kurzu prosíme přineste podepsaný přiložený dokument. 
