export of course participants with not verified address

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -215,7 +215,8 @@ txt.ui.iscus.ClubLabels=Štítky oddílu
 txt.ui.export.Standard=Standardní
 txt.ui.export.Cus=Česká unie sportu
 txt.ui.export.CSV=csv
-txt.ui.export.XLS=xls 
+txt.ui.export.XLS=xls
+txt.ui.export.NotValidAddress=Záznamy s neověřenou adresou
 
 txt.ui.month.0=Leden
 txt.ui.month.1=Únor
