admin update address status

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -66,6 +66,7 @@ txt.ui.common.participantDetail=Detail účastníka
 txt.ui.common.results=Výsledky
 txt.ui.common.value=Hodnota
 txt.ui.common.street=Ulice
+txt.ui.common.orCityPart=nebo část obce
 txt.ui.common.city=Město
 txt.ui.common.landRegNo=Číslo popisné
 txt.ui.common.landRegNo.abbr=Čp
@@ -374,6 +375,7 @@ msg.ui.address.AddressIsValid=Adresa je platná.
 msg.ui.address.AddressIsNotValid=Adresa není platná.
 msg.ui.address.AddressVerificationServiceNotAvailable=Služba pro ověření adresy není dostupná, použijte prosím neověřenou adresu.
 msg.ui.address.FillCityAndStreet=Vyplňte město a ulici.
+msg.ui.address.AddressValidated=Adresa je prohlášena za platnou.
 
 # Enums
 enum.DayOfWeek.MONDAY=pondělí
