course detail, add/remove trainer

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -201,6 +201,7 @@ txt.ui.common.CzechCitizen=občan ČR
 txt.ui.common.Sex=Pohlaví
 txt.ui.common.Sex.male=muž
 txt.ui.common.Sex.female=žena
+txt.ui.common.trainers=Trenéři
 
 txt.ui.common.confirmCourseApplicationEmail=Potvrzující email k přihlášce
 txt.ui.common.confirmCourseApplicationEmail.desc=Odešle potvrzuijící email na vybrané přihlášky
