trainer in course administration frontend

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -202,6 +202,8 @@ txt.ui.common.Sex=Pohlaví
 txt.ui.common.Sex.male=muž
 txt.ui.common.Sex.female=žena
 txt.ui.common.trainers=Trenéři
+txt.ui.common.trainer=Trenér
+txt.ui.common.addTrainer=Přidat trenéra
 
 txt.ui.common.confirmCourseApplicationEmail=Potvrzující email k přihlášce
 txt.ui.common.confirmCourseApplicationEmail.desc=Odešle potvrzuijící email na vybrané přihlášky
