filter courses for trainer

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -77,6 +77,7 @@ txt.ui.common.configBasic=Základní nastavení
 txt.ui.common.courseLocations=Místa konání kurzů
 txt.ui.common.courseLocation=Místo konání kurzu
 txt.ui.common.courseLocation2=Místo konání
+txt.ui.common.location=Místo
 txt.ui.common.swimStyleAdmin=Administrace stylů
 txt.ui.common.styles=Styly
 txt.ui.common.all=Vše
@@ -204,6 +205,7 @@ txt.ui.common.Sex.female=žena
 txt.ui.common.trainers=Trenéři
 txt.ui.common.trainer=Trenér
 txt.ui.common.addTrainer=Přidat trenéra
+txt.ui.common.myCourses=moje kurzy
 
 txt.ui.common.confirmCourseApplicationEmail=Potvrzující email k přihlášce
 txt.ui.common.confirmCourseApplicationEmail.desc=Odešle potvrzuijící email na vybrané přihlášky
