course complete data export

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -206,6 +206,8 @@ txt.ui.common.trainers=Trenéři
 txt.ui.common.trainer=Trenér
 txt.ui.common.addTrainer=Přidat trenéra
 txt.ui.common.myCourses=moje kurzy
+txt.ui.common.count=Počet
+txt.ui.common.Participants2=Účastníků
 
 txt.ui.common.confirmCourseApplicationEmail=Potvrzující email k přihlášce
 txt.ui.common.confirmCourseApplicationEmail.desc=Odešle potvrzuijící email na vybrané přihlášky
@@ -223,6 +225,7 @@ txt.ui.export.Cus=Česká unie sportu
 txt.ui.export.CSV=csv
 txt.ui.export.XLS=xls
 txt.ui.export.NotValidAddress=Záznamy s neověřenou adresou
+txt.ui.export.CompletCourse=Všechna data kurzů
 
 txt.ui.month.0=Leden
 txt.ui.month.1=Únor
