add recaptcha to example property file

--- a/scb-data-service/src/main/resources/config/example.properties
+++ b/scb-data-service/src/main/resources/config/example.properties
@@ -5,3 +5,7 @@ db_pwd=
 
 # Internet banking auth token
 auth.token=
+
+# ReCaptcha
+recaptcha.sitekey=6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI
+recaptcha.secretkey=6LeIxAcTAAAAAGG-vFI1TnRWxMZNFuojJ4WifJWe
