Course type,  sql,  domain, DAO, gui course detail

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -208,9 +208,11 @@ txt.ui.common.addTrainer=Přidat trenéra
 txt.ui.common.myCourses=moje kurzy
 txt.ui.common.count=Počet
 txt.ui.common.Participants2=Účastníků
-
+txt.ui.common.CourseType=Typ kurzu
 txt.ui.common.confirmCourseApplicationEmail=Potvrzující email k přihlášce
 txt.ui.common.confirmCourseApplicationEmail.desc=Odešle potvrzuijící email na vybrané přihlášky
+txt.ui.CourseType.STANDARD.desc=Jednorázový kurz daném školním roce.
+txt.ui.CourseType.TWO_SEMESTER.desc=Kurz probíhající v obou pololetích školního roku. 
 
 txt.ui.iscus.particId=ID člena ve svazu
 txt.ui.iscus.particRole=Role
@@ -425,3 +427,6 @@ enum.AddressValidationStatus.NOT_VERIFIED=Neověřená
 enum.IscusRole.ACTIVE_SPORTSMAN=Aktivní sportovec
 enum.IscusRole.ACTIVE_SPORTSMAN_PROFESSIONAL=Aktivní sportovec - soutěže
 enum.IscusRole.OTHER=Ostatní
+
+enum.CourseType.STANDARD=Standardní
+enum.CourseType.TWO_SEMESTER=Celoroční
