standard course, couurse instruction email

--- a/scb-data-service/src/main/resources/scb-data-service-message.properties
+++ b/scb-data-service/src/main/resources/scb-data-service-message.properties
@@ -8,9 +8,11 @@ msg.validation.warn.styleCannotBeDeleteBecauseUsedInResult=Styl nelze odstranit,
 msg.validation.warn.usernameWithSameUsernameExists=Uživatel s uživatelským jménem {0} již v systému existuje.
 
 # mail s platebními instrukcemi
-msg.ui.mail.paymentInstruction.subject=Platba za kurz "{0}" pro {1}. pololetí ročníku {2}, účastník {3}
+msg.ui.mail.paymentInstruction.subject.twoSemester=Platba za kurz "{0}" pro {1}. pololetí ročníku {2}, účastník {3}
+msg.ui.mail.paymentInstruction.subject.standard=Platba za kurz "{0}", ročník {1}, účastník {2}
 msg.ui.mail.paymentInstruction.text0=Dobrý den,
-msg.ui.mail.paymentInstruction.text1=níže zasíláme instrukce k platbě za kurz "{0}" pro {1}. pololetí ročníku {2}, účastník {3}.
+msg.ui.mail.paymentInstruction.text1.twoSemester=níže zasíláme instrukce k platbě za kurz "{0}" pro {1}. pololetí ročníku {2}, účastník {3}.
+msg.ui.mail.paymentInstruction.text1.standard=níže zasíláme instrukce k platbě za kurz "{0}", ročník {1}, účastník {2}.
 msg.ui.mail.paymentInstruction.text2=Platbu prosím pošlete nejpozději do {0}.
 msg.ui.mail.paymentInstruction.text4=Pokud již byla platba uhrazena, berte prosím tuto zprávu jako bezpředmětnou.
 
